substrate/frame/support/test/tests/pallet_ui/storage_not_storage_type.stderr
error: Invalid pallet::storage, expected ident: `StorageValue` or `StorageMap` or `CountedStorageMap` or `StorageDoubleMap` or `StorageNMap` or `CountedStorageNMap` in order to expand metadata, found `u8`.
  --> tests/pallet_ui/storage_not_storage_type.rs:36:16
   |
36 |     type Foo<T> = u8;
   |                   ^^
